added main section

--- a/index.html
+++ b/index.html
@@ -10,14 +10,35 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>404Error</title>
   </head>
   <body>
-    <div class="container">
-      <header>
-        <h1>404 NOT FOUND</h1>
-      </header>
-    </div>
+    <header>
+      <h1>404 NOT FOUND</h1>
+    </header>
+    <main class="main-container">
+      <div>
+        <img src="./images/Scarecrow.png" alt="scarecrow image" />
+      </div>
+
+      <div class="main-texts-container">
+        <h2>I have a bad news for you</h2>
+        <p>
+          The page you are looking for might be removed or is temporarily
+          unavailable
+        </p>
+        <a
+          class="back-to-home hvr-bob"
+          href="https://www.youtube.com/watch?v=2mcPLwhS43Q"
+          target="_blank"
+          >Back to homepage</a
+        >
+      </div>
+    </main>
   </body>
 </html>
