--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>404Error</title>
   </head>
   <body>
-    <header>
+    <header class="header-container">
       <h1>404 NOT FOUND</h1>
     </header>
     <main class="main-container">
@@ -40,5 +44,8 @@
         >
       </div>
     </main>
+    <footer class="footer-container">
+      <span>created by santiagotuero - devChallenges.io</span>
+    </footer>
   </body>
 </html>
